python/test-data/testTypesSequence2.err
Traceback (most recent call last):
  File "test-data/testTypesSequence2.py", line 11, in <module>
    foo("Hello!") # should fail
  File "test-data/testTypesSequence2.py", line 6, in foo
    for x in seq:
WyppTypeError: str is not a Sequence[int]
given:    'Hello!'
expected: value of type Sequence[int]

context: foo(seq: Sequence[int]) -> None
                  ^^^^^^^^^^^^^
declared at: test-data/testTypesSequence2.py:3
caused by: test-data/testTypesSequence2.py:11
  | foo("Hello!") # should fail
